# SoCeteer

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  README.md  build.sbt
.github/configs/: fast-matrix.json  full-matrix.json
.github/workflows/: build-docker-image.yml  build-docker.yml  on-pr.yml  on-tag.yml  prepare-matrix.yml  test-docker.yml  test-native.yml  test-simulation-on-push-native.yml  (+2 more)
binaries/: .gitignore  CMakeLists.txt  README.md  requires_system_dir.cmake
binaries/baremetal/: soct-test.h  soctglue-static.cmake
binaries/baremetal/dp-test/: CMakeLists.txt  diag.c  diag.h  dp.c  dp.h  dptest.h  main.c  render.c  render.h  video.c  video.h
binaries/baremetal/dp-test/soct_xil/: sleep.h  soct_xil.c  xenv.h  xil_io.h  xil_printf.h  xparameters.h  xstatus.h  xvidc.h
binaries/baremetal/gemmini-mnist/: CMakeLists.txt  mnist_if.hpp
binaries/baremetal/syscall-test/: CMakeLists.txt
binaries/boot/: CMakeLists.txt  init.c  initramfs.desc.in  linux.fragment.in
binaries/boot/host-compat/: README.md  byteswap.h  darwin-compat.h
binaries/bootroms/: bootrom.lds  template.cmake
binaries/bootroms/sd-boot/: CMakeLists.txt  bootrom.c  bootrom.lds  common.h  head.S
binaries/bootroms/testchipip-boot/: CMakeLists.txt  bootrom.S
binaries/linux/: CMakeLists.txt  build-sysroot.sh.in  initram.cmake  initramfs.desc.in  linux.fragment.in  userspace.cmake
binaries/linux-sysroot/: CMakeLists.txt  build-sysroot.sh.in
binaries/linux/cmake/: boot-image.cmake  busybox.cmake  kernel-modules.cmake  kernel-patches.cmake  sysroot.cmake
binaries/linux/drivers/: README.md
binaries/linux/drivers/sdc/: Kbuild  fpga-axi-sdc.c
binaries/linux/patches/: 0001-irqchip-xilinx-platform-probe.patch  README.md
binaries/linux/programs/linux-init/: CMakeLists.txt  main.c
binaries/linux/rootfs/: README.md
binaries/linux/userspace/: initram.cmake  userspace.cmake
binaries/linux/userspace/echo/: CMakeLists.txt  main.c
binaries/linux/userspace/shell/: CMakeLists.txt  init.sh  initramfs.desc.in  profile.sh
binaries/programs/: linux-userspace.cmake  template.cmake  xsdb-flash.cmake
binaries/programs/debug-sd/: CMakeLists.txt  main.c
binaries/programs/dp-test/: CMakeLists.txt  main.c  teapot_mesh.h
binaries/programs/dp-test/soct_xil/: sleep.c  xil_assert.h  xil_io.c  xil_types.h  xvidc.c
binaries/programs/gemmini-basic/: CMakeLists.txt  main.c
binaries/programs/gemmini-mnist/: CMakeLists.txt  generate.py  main.cpp  model.h
binaries/programs/heap-test/: CMakeLists.txt  main.c
binaries/programs/hello-c/: CMakeLists.txt  main.c
binaries/programs/hello-cpp/: CMakeLists.txt
binaries/programs/hello-hart/: CMakeLists.txt  main.c
binaries/programs/linux-init/: CMakeLists.txt  main.c
binaries/programs/mem-test/: CMakeLists.txt  main.c
binaries/programs/multi-core/: main.c
binaries/programs/sd-test/: CMakeLists.txt  main.c
binaries/programs/syscall-test/: CMakeLists.txt  main.cpp
bootrom/: CmakeLists.txt
buildtools/libgloss/: CMakeLists.txt
buildtools/libgloss/board/misc/: diskio.c  head.S  uart.h
buildtools/libgloss/board/sys/: close.c  fstat.c  getpid.c  isatty.c  kill.c  read.c  sbrk.c  write.c
buildtools/libgloss/htif/misc/: asm.h  atomic.h  htif.c  htif.h  main.c  spinlock.h  syscall.h  traps.c
buildtools/libgloss/htif/sys/: chmod.c  close.c  exit.c  getpid.c  gettimeofday.c  kill.c  lseek.c  mkdir.c  pathconf.c  stat.c
buildtools/libgloss/include/: common.h  compiler.h
buildtools/libgloss/include/board/: ffconf.h
buildtools/libgloss/include/smoldtb/: smoldtb.h
buildtools/libgloss/src/smoldtb/: smoldtb.c
buildtools/libgloss/src/stdio/: printbuf.c  printf.c  vxprintf.c  vxprintf.h
docs/: Overview.md  docs.html  glossary.html  glossary.js  sections.js  style.css
examples/: CMakeLists.txt
examples/programs/: requires_system_dir.cmake  template.cmake
examples/programs/gemmini-basic/: CMakeLists.txt  main.c
examples/programs/hello-cpp/: CMakeLists.txt  main.cpp
examples/programs/syscall-test/: CMakeLists.txt
project/: ProjectOps.scala  build.sbt  plugins.sbt
scripts/: flash-elf.sh
shared/libgloss/: .gitignore  CMakeLists.txt
shared/libgloss/board/misc/: boardio.c  diskio.c  dtb.c  syscall.h  uart.c
shared/libgloss/board/sys/: exit.c  fopen.c  fstat.c  getentropy.c  getpid.c  kill.c  lseek.c
shared/libgloss/board/util/: board.ld
shared/libgloss/cmake/: libgloss.cmake
shared/libgloss/htif/misc/: crt0.S  crtmain-argv.S  crtmain.S  htif.h  syscall.h  tls.c
shared/libgloss/htif/sys/: chdir.c  chmod.c  close.c  fstat.c  getcwd.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  lseek.c  mkdir.c  open.c  openat.c  pathconf.c  read.c  stat.c  unlink.c  write.c
shared/libgloss/include/: common.h
shared/libgloss/include/board/: boardio.h
shared/libgloss/include/htif/: constants.h  syscalls.h
shared/libgloss/include/smoldtb/: smoldtb.h
shared/libgloss/src/: dso_handle.c
shared/libgloss/src/smoldtb/: smoldtb.c
shared/libgloss/src/stdio/: printbuf.h  puts.c  snprintf.c  sprintf.c  swprintf.c  wc.c
shared/soctglue/: CMakeLists.txt  soct.ld
shared/soctglue/include/: asm.h  atomic.h  ffconf.h  spinlock.h
shared/soctglue/include/soct/: common.h  defaults.h  soct_ff.h  soctglue.h  syscall-handler.h  syscalls.h
shared/soctglue/src/: compat.c  crt0.S  default-syscalls.h  smoldtb.c  soctglue.c  soctglue.h  syscall-handler.c  syscall-handler.h  syscall-htif.c  syscall-htif.h  syscall-sdc.h  syscall-uart.c  syscall-uart.h
shared/soctglue/src/posix/: close.c  exit.c  fstat.c  getpid.c  isatty.c  kill.c  lseek.c  open.c  openat.c  read.c  sbrk.c  write.c
shared/soctglue/src/soct_ff/: default-ff.h  sdc.c  soct_ff.c  syscall-sdc.c
shared/soctglue/src/stdio/: printbuf.h  stdio.c  vxprintf.c  wc.c
shared/soctglue/src/stubs/: soct_ff.c
sim/: CMakeLists.txt  argparse.cpp  argparse.hpp  asserts.hpp  custom-verilated.cpp  custom-verilated.h  dpi-c.cpp  dpi-c.hpp  logging.cpp  logging.hpp  main.cpp  timepp.hpp  verilator_config.vlt
sim/remote/: bitbang.cpp  bitbang.hpp  rocket.cfg
(+314 files in other folders)
